maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:25: error: not found: value i
	i = i+1;
        ^Escaper:29: error: not found: value i
	var i.int = 0;
            ^Escaper:31: error: not found: value i
	i = i+1;
        ^Escaper:32: error: not found: value i
	while (i != 0) {
               ^Escaper:33: error: not found: value estfacemur
		if (estfacemur) {
                    ^Escaper:35: error: not found: value i
			i = i+1;
                        ^Escaper:41: error: not found: value i
			i = i-1;
                        ^